# realme_GT8pro-AndroidB-vendor-source

kernel_platform/qcom/opensource/devicetree/: BUILD.bazel  Makefile
kernel_platform/qcom/opensource/devicetree/bindings/input/: qcom,hv-haptics.yaml
kernel_platform/qcom/opensource/devicetree/bindings/thermal/: qcom,dynamic-hw-trip.yaml
kernel_platform/qcom/opensource/devicetree/oplus/: Makefile  canoe_overlay_common.dtsi  lafa-24624-canoe-overlay.dtso  lafa_overlay_common.dtsi  platform_map.bzl
kernel_platform/qcom/opensource/devicetree/oplus/mm/: lafa-24624-canoe-mm.dtsi
kernel_platform/qcom/opensource/devicetree/oplus/oplus_chg/: oplus-chg-24624-fw.dtsi  oplus-chg-24624-pps.dtsi  oplus-chg-24624-silicon-deep-discharge-dodge.dtsi  oplus-chg-24624-silicon-p-dodge.dtsi  oplus-chg-24624.dtsi  oplus-chg-8850.h.dtsi
kernel_platform/qcom/opensource/devicetree/oplus/oplus_misc/: oplus-misc-24624.dtsi
kernel_platform/qcom/opensource/devicetree/oplus/oplus_nfc/: lafa-24624-sn220.dtsi
kernel_platform/qcom/opensource/devicetree/oplus/oplus_uff/: oplus-uff-24624.dtsi
kernel_platform/qcom/opensource/devicetree/oplus/sensor/: lafa-sensor-24624.dtsi
kernel_platform/qcom/opensource/devicetree/qcom/: Makefile  alor-interposer-common.dtsi  alor-regulators.dtsi  alor.dtsi  canoe-cdp.dtsi  canoe-mtp.dtsi  canoe-oemvm.dtsi  canoe-pinctrl.dtsi  canoe-pmic-overlay.dtsi  canoe-qrd.dtsi  canoe-qupv3.dtsi  canoe-regulators.dtsi  canoe-rumi.dtsi  canoe-thermal-overlay.dtsi  canoe-thermal.dtsi  canoe-usb.dtsi  canoe-v2.dtsi  canoe.dtsi  platform_map.bzl  pmk8850.dtsi
(+26 files in other folders)
